--- a/quake-config.json
+++ b/quake-config.json
@@ -1,4 +1,4 @@
 {
-    feed.url: "http://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/all_hour.quakeml",
-    feed.sampleRate: 5
+    "quake.feed.url": "http://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/all_hour.quakeml",
+    "quake.feed.sampleRate": 5
 }
