--- a/quake-alert-service.properties
+++ b/quake-alert-service.properties
@@ -1,3 +1,3 @@
-quake.feed.url=http://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/all_hour.quakeml
-quake.feed.rate=5
+QUAKE_FEED_URL=http://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/all_hour.quakeml
+QUAKE_FEED_RATE=5
 
